--- a/app/templates/user/profile/profile.html
+++ b/app/templates/user/profile/profile.html
@@ -175,6 +175,25 @@
                                 <span class="d-sm-none">Docs</span>
                             </button>
                         </li>
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link" id="history-tab" data-bs-toggle="tab"
+                                data-bs-target="#history-tab-pane" type="button" role="tab"
+                                aria-controls="history-tab-pane" aria-selected="false">
+                                <i class="bi bi-clock-history me-1 me-md-2"></i>
+                                <span class="d-none d-sm-inline">Historial</span>
+                                <span class="d-sm-none">Hist.</span>
+                            </button>
+                        </li>
+
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link" id="notifications-tab" data-bs-toggle="tab"
+                                data-bs-target="#notifications-tab-pane" type="button" role="tab"
+                                aria-controls="notifications-tab-pane" aria-selected="false">
+                                <i class="bi bi-bell me-1 me-md-2"></i>
+                                <span class="d-none d-sm-inline">Notificaciones</span>
+                                <span class="d-sm-none">Notif.</span>
+                            </button>
+                        </li>
                         {% if current_user.role.name in ['program_admin', 'postgraduate_admin'] %}
                         <li class="nav-item" role="presentation">
                             <button class="nav-link text-danger" id="admin-tab" data-bs-toggle="tab"
@@ -209,7 +228,16 @@
                     tabindex="0">
                     {% include 'user/profile/_profile_documents.html' %}
                 </div>
-
+                <!-- Historial -->
+                <div class="tab-pane fade" id="history-tab-pane" role="tabpanel" aria-labelledby="history-tab"
+                    tabindex="0">
+                    {% include 'user/profile/_profile_history.html' %}
+                </div>
+                <!-- Notificaciones -->
+                <div class="tab-pane fade" id="notifications-tab-pane" role="tabpanel"
+                    aria-labelledby="notifications-tab" tabindex="0">
+                    {% include 'user/profile/_profile_notifications.html' %}
+                </div>
                 <!-- Panel de Administración -->
                 {% if current_user.role.name in ['program_admin', 'postgraduate_admin'] %}
                 <div class="tab-pane fade" id="admin-tab-pane" role="tabpanel" aria-labelledby="admin-tab" tabindex="0">
