--- a/app/static/css/user/profile.css
+++ b/app/static/css/user/profile.css
@@ -433,3 +433,37 @@
     color: #fff;
   }
 }
+
+.timeline {
+    position: relative;
+    padding-left: 30px;
+}
+
+.timeline-item {
+    position: relative;
+    padding-bottom: 20px;
+    border-left: 2px solid #dee2e6;
+}
+
+.timeline-item:last-child {
+    border-left: 2px solid transparent;
+}
+
+.timeline-marker {
+    position: absolute;
+    left: -8px;
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+    background: #0d6efd;
+    border: 2px solid #fff;
+}
+
+.timeline-content {
+    padding-left: 25px;
+}
+
+.timeline-date {
+    font-size: 0.875rem;
+    color: #ffffff;
+}
