--- a/app/templates/admin/settings/archives.html
+++ b/app/templates/admin/settings/archives.html
@@ -250,6 +250,6 @@
 
 {% block scripts %}
 {{ super() }}
-<script src="{{ url_for('static', filename='js/admin/settings/index.js') }}?v={{ static_version }}"></script>
+<script src="{{ url_for('static', filename='js/admin/settings/archives.js') }}?v={{ static_version }}"></script>
 <script src="{{ url_for('static', filename='js/admin/settings/retention.js') }}?v={{ static_version }}"></script>
 {% endblock %}
